[package]
name = "nag-driver"
version = "0.1.0"
authors = ["Maximilian Siling <root@goldstein.rs>"]
edition = "2021"
description = "Driver library for cargo-nag"
repository = "https://github.com/GoldsteinE/cargo-nag"
license = "MIT OR Apache-2.0"
keywords = ["linter", "lint", "lints", "cargo", "cargo-plugin"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
